Commit current work for mobilele.