@@ -3,40 +3,39 @@ package org.softuni.mobilele.service.impl;
 import org.softuni.mobilele.model.dto.BrandDTO;
 import org.softuni.mobilele.model.dto.ModelDTO;
 import org.softuni.mobilele.model.entity.ModelEntity;
+import org.softuni.mobilele.repository.BrandRepository;
 import org.softuni.mobilele.repository.ModelRepository;
 import org.softuni.mobilele.service.BrandService;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class BrandServiceImpl implements BrandService {
 
     private final ModelRepository modelRepository;
+    private final BrandRepository brandRepository;
 
-    public BrandServiceImpl(ModelRepository modelRepository) {
+
+    public BrandServiceImpl(ModelRepository modelRepository,
+                            BrandRepository brandRepository) {
         this.modelRepository = modelRepository;
+        this.brandRepository = brandRepository;
     }
 
     @Override
     public List<BrandDTO> getAllBrands() {
 
-        //TODO better implementation, sort by brand name
-        Map<String, BrandDTO> brands = new TreeMap<>();
-
-        for (ModelEntity model : modelRepository.findAll()) {
-
-            if (!brands.containsKey(model.getBrand().getBrand())) {
-                brands.put(model.getBrand().getBrand(),
-                        new BrandDTO(model.getBrand().getBrand(),
-                                new ArrayList<>()));
-            }
-
-            brands.get(model.getBrand().getBrand()).models().add(
-                    new ModelDTO(model.getId(), model.getName()));
-
-        }
-
-        return brands.values().stream().toList();
+        return brandRepository.findAll().stream()
+                .map(brand -> new BrandDTO(
+                        brand.getBrand(),
+                        modelRepository.findAllByBrandId(brand.getId()).stream()
+                                .map(model -> new ModelDTO(model.getId(), model.getName()))
+                                .sorted(Comparator.comparing(ModelDTO::name))
+                                .collect(Collectors.toList())
+                ))
+                .sorted(Comparator.comparing(BrandDTO::name))
+                .collect(Collectors.toList());
     }
 }
